--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="b2"><img src="image/jay.png" alt="jaydeep"></div>
         <div class="c2"><p>I am Jaydeep Patidar and i'm a web developer. Currently i am the student of Master of computer application in NIT Warangal. I am also working on E-Learning web development project . </p>
-        <div class="button"><a href="image/resume.pdf" type="_blank">Resume</a></div>
+        <div class="button"><a href="image/jaydeep_resume.pdf" type="_blank">Resume</a></div>
         </div>
     </div>
 
